<android.support.v4.widget.SwipeRefreshLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/swipe_refresh_layout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/medication_list"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<orionhealth.app.activities.external.AnimatedExpandableListView
		android:id="@android:id/list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:childDivider="#00000000"
		android:groupIndicator="@null"
		android:indicatorRight="@dimen/activity_vertical_margin">
	</orionhealth.app.activities.external.AnimatedExpandableListView>


	<TextView
		android:id="@android:id/empty"
		android:text="@string/empty_med_list_message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp"/>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/button_add"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		app:backgroundTint="#ff8900"
		app:elevation="5dp"
		style="@style/MedicationFABStyle"/>


</RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout >
